--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -55,36 +55,50 @@
         android:id="@+id/read" />
 
     <Button
+        android:text="STOP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/up_button"
+        android:id="@+id/stop_button"
+        android:layout_alignStart="@+id/up_button" />
+
+    <Button
         android:text="Up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/read"
-        android:layout_toEndOf="@+id/addressLabel"
-        android:layout_marginTop="44dp"
-        android:id="@+id/up_button" />
-
-    <Button
-        android:text="left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:id="@+id/left_button"
-        android:layout_marginBottom="60dp" />
-
-    <Button
-        android:text="Right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/right_button"
-        android:layout_marginStart="10dp" />
+        android:id="@+id/up_button"
+        android:layout_above="@+id/right_button"
+        android:layout_alignStart="@+id/down_button" />
 
     <Button
         android:text="Down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/down_button"
-        android:layout_toStartOf="@+id/read"
-        android:layout_marginBottom="55dp" />
+
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/read"
+        android:layout_toEndOf="@+id/deviceAddress" />
+
+    <Button
+        android:text="left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/left_button"
+
+        android:layout_alignBaseline="@+id/right_button"
+        android:layout_alignBottom="@+id/right_button"
+        android:layout_alignEnd="@+id/deviceName" />
+
+    <Button
+        android:text="Right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/right_button"
+
+        android:layout_above="@+id/down_button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp" />
 
     <!--<ImageView-->
         <!--app:srcCompat="@android:drawable/screen_background_dark"-->
